# discord-bot-rs

./: .gitignore  Cargo.toml  README.md
src/: database.rs  main.rs  util.rs
