[package]
name = "discord-bot-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serenity = { default-features = false, features = ["client", "gateway", "rustls_backend", "model", "unstable_discord_api"]  }
lazy_static = "1.4.0"
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }
serde = { version = "1.0", features = ["derive"] }
toml = "0.5.8"
regex = "1.5"
pickledb = { version = "0.4" }
chrono = { version = "0.4", features = ["serde"] }